--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   },
   "dependencies": {
     "apollo-server-lambda": "^2.13.0",
-    "graphql": "^15.0.0"
+    "graphql": "^15.0.0",
+    "sequelize": "^5.21.7",
+    "sqlite3": "^4.2.0"
   }
 }
