--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
   },
   "dependencies": {
     "apollo-server-lambda": "^2.13.0",
+    "dataloader": "^2.0.0",
     "graphql": "^15.0.0",
-    "sequelize": "^5.21.7",
+    "sequelize": "^5.21.8",
     "sqlite3": "^4.2.0"
   }
 }
